@@ -42,4 +42,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs('-XX:+EnableDynamicAgentLoading')
 }
